# led-ticker

./: .gitignore  ARCHITECTURE.md  BLE_PROTOCOL.md  CLAUDE.md  GETTING_STARTED.md  LICENSE.md  NOTICE  README.md  platformio.ini
.github/workflows/: firmware.yml  publish.yml
assets/: bracket.stl  top-strip.stl
assets/case/: bottom-strip.stl  top-strip.stl
docs/: flash.html  index.html  privacy.html  style.css
docs/firmware/: manifest.json
firmware/: FIRMWARE_GUIDE.md  WOKWI.md  diagram.json  platformio.ini  wokwi.toml
firmware/src/: bold_font.h  config.h  console.cpp  console.h  logic.cpp  logic.h  main.cpp  version.h
firmware/test/test_console/: test_console.cpp
firmware/test/test_logic/: test_logic.cpp
hardware/: LICENSE
hardware/case/: LED-Screen.step  README.md  bottom-strip.stl  top-strip.stl
hardware/pcb/: EasyEDA_PCB.json  README.md
pcb/: EasyEDA_PCB.dxf  EasyEDA_PCB.mtl
specs/: 2026-06-13-serial-console-design.md
src/: config.h  main.cpp  version.h
tools/: README.md  gen_bold_font.py  led.py  pyproject.toml
tools/src/led_ticker/: __init__.py  cli.py  client.py  errors.py  protocol.py
tools/tests/: test_cli.py  test_client.py  test_errors.py  test_protocol.py
